[workspace]
resolver = "2"
members = [
    "lib",
    "samples/demo-server",
    "samples/simple-client",
    "samples/mqtt-client",
    "samples/simple-server",
    "samples/chess-server",
    "samples/discovery-client",
    "samples/event-client",
    "tools/certificate-creator",
    "samples/async-server",
    "opcua-codegen",
    "opcua-macros",
    "opcua-xml",
    "opcua-types"
, "opcua-crypto", "opcua-core", "opcua-client", "opcua-server", "opcua-nodes", "opcua-core-namespace"]

[workspace.dependencies]
async-trait = "0.1.79"
arc-swap = "1.6.0"
bitflags = "2.4"
bytes = "1.3"
futures = "0.3"
hashbrown = "0.14.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_yaml = "0.9"
log = "0.4"
regex = "1.7"
lazy_static = "1.4.0"
uuid = { version = "1.2", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.4"
base64 = "0.21"
gethostname = "0.4"
openssl = "0.10"
openssl-sys = "0.9"
foreign-types = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
url = "1.6"
