[workspace]
resolver = "2"
members = [
    "lib",
    "samples/demo-server",
    "samples/simple-client",
    "samples/mqtt-client",
    "samples/simple-server",
    "samples/chess-server",
    "samples/discovery-client",
    "samples/event-client",
    "tools/certificate-creator",
    "samples/async-server",
    "opcua-codegen",
    "opcua-macros",
    "opcua-xml",
    "opcua-types"
, "opcua-crypto", "opcua-core", "opcua-client", "opcua-server", "opcua-nodes", "opcua-core-namespace"]

[workspace.dependencies]
async-trait = "0.1.79"
arc-swap = "1.6.0"
bitflags = "2.4"
bytes = "1.3"
futures = "0.3"
hashbrown = "0.14.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_with = "3.9.0"
serde_yaml = "0.9"
log = "0.4"
regex = "1.7"
lazy_static = "1.4.0"
uuid = { version = "1.2", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.4"
base64 = "0.21"
gethostname = "0.4"
foreign-types = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
url = "1.6"


hmac = "0.12.1"
sha2 = {version = "0.10.8", features = ["oid"]}
sha1 = {version = "0.10.6", features = ["oid"]}
cbc  = "0.1.2"
aes  = "0.8.4"
rsa = {version = "0.9.6", features = ["sha2","sha1","pem"]}
rand = "0.8.5"
x509-cert = {version="0.2.5",features=["builder","hazmat"]}
const-oid = {version="0.9.3",features=["db"]}


# Compile the crypto dependencies in release even in debug, to make test performance tolerable
# This makes initial compile times slightly worse, but tests run way faster.
[profile.dev.package.sha1]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.cbc]
opt-level = 3
[profile.dev.package.aes]
opt-level = 3
[profile.dev.package.rsa]
opt-level = 3
[profile.dev.package.rand]
opt-level = 3
[profile.dev.package.x509-cert]
opt-level = 3
[profile.dev.package.hmac]
opt-level = 3
# This is probably the most important for the tests at the moment,
# as it is on the hot path of RSA private key generation (gen_prime)
[profile.dev.package.num-bigint-dig]
opt-level = 3
[profile.dev.package.rand_core]
opt-level = 3
