[package]
name = "async-opcua-codegen"
version = "0.14.0"
edition = "2021"
description = "OPC UA code generation library"
authors = ["Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua/"

[lib]
name = "opcua_codegen"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
convert_case = "0.6.0"
log = { workspace = true }
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
regex = "1.10.5"
roxmltree = "0.20.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
syn = { version = "2.0.71", features = ["full"] }
thiserror = "1.0.63"
uuid = "1.10.0"

async-opcua-xml = { path = "../async-opcua-xml", version = "0.14.0" }
