[package]
name = "async-opcua-core-namespace"
version = "0.14.0"
description = "OPC UA generated code for the core namespace"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-core-namespace/"
edition = "2021"

[lib]
name = "opcua_core_namespace"

[dependencies]
async-opcua-types = { path = "../async-opcua-types", version = "0.14.0" }
async-opcua-nodes = { path = "../async-opcua-nodes", version = "0.14.0" }
