[package]
name = "async-opcua-core"
version = "0.14.0"
description = "OPC UA core utils for client and server"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-core/"
edition = "2021"

[lib]
name = "opcua_core"

[dependencies]
bytes = "^1"
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
parking_lot = { version = "^0.12", features = ["send_guard"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "^0.9"
thiserror = "^1"
tokio = { version = "^1", features = ["full"] }
tokio-util = { version = "^0.7", features = ["codec"] }
url = "^2"

async-opcua-crypto = { path = "../async-opcua-crypto", version = "0.14.0" }
async-opcua-types = { path = "../async-opcua-types", version = "0.14.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
