[package]
name = "async-opcua-crypto"
version = "0.14.0"
description = "OPC UA cryptography library"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-crypto/"
edition = "2021"

[lib]
name = "opcua_crypto"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
gethostname = "^0.5"
log = { workspace = true }
serde = { workspace = true }

async-opcua-types = { path = "../async-opcua-types", version = "0.14.0" }

aes = "^0.8"
cbc = "^0.1"
const-oid = { version = "^0.9", features = ["db"] }
hmac = "^0.12"
rand = "^0.8"
rsa = { version = "^0.9", features = ["sha2", "sha1", "pem"] }
sha1 = { version = "^0.10", features = ["oid"] }
sha2 = { version = "^0.10", features = ["oid"] }
x509-cert = { version = "^0.2", features = ["builder", "hazmat"] }

[dev-dependencies]
tempdir = "0.3"
