[package]
name = "async-opcua-macros"
version = "0.1.0"
description = "OPC UA support proc macros"
authors = ["Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/rust-opcua"
repository = "https://github.com/freeopcua/rust-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"
edition = "2021"

[features]
json = []
xml = []

[lib]
name = "opcua_macros"

proc-macro = true

[dependencies]
base64 = { workspace = true }
convert_case = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
uuid = { workspace = true }
