[package]
name = "async-opcua-macros"
version = "0.14.0"
description = "OPC UA support proc macros"
authors = ["Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-macros/"
edition = "2021"

[features]
json = []
xml = []

[lib]
name = "opcua_macros"

proc-macro = true

[dependencies]
base64 = "^0.22"
convert_case = "^0.6"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
uuid = { version = "^1", features = ["v4"] }

[package.metadata.docs.rs]
all-features = true
