[package]
name = "async-opcua-nodes"
version = "0.14.0"
description = "OPC UA node representation and import framework"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-nodes/"
edition = "2021"

[lib]
name = "opcua_nodes"

[features]
xml = ["async-opcua-types/xml", "async-opcua-xml"]

[dependencies]
bitflags = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

async-opcua-macros = { path = "../async-opcua-macros", version = "0.14.0" }
async-opcua-types = { path = "../async-opcua-types", version = "0.14.0" }
async-opcua-xml = { path = "../async-opcua-xml", optional = true, version = "0.14.0" }

[dev-dependencies]
async-opcua-nodes = { path = ".", features = ["xml"] }

[package.metadata.docs.rs]
all-features = true
