[package]
name = "async-opcua-types"
version = "0.14.0"
description = "OPC UA data types"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-types/"
edition = "2021"

[features]
json = ["struson", "async-opcua-macros/json"]
xml = ["async-opcua-xml", "async-opcua-macros/xml"]

[lib]
name = "opcua_types"

[dependencies]
bitflags = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
hashbrown = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
byteorder = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

struson = { workspace = true, optional = true }

async-opcua-macros = { path = "../async-opcua-macros", version = "0.14.0" }
async-opcua-xml = { path = "../async-opcua-xml", optional = true, version = "0.14.0" }
percent-encoding-rfc3986 = "0.1.3"

[dev-dependencies]
async-opcua-types = { path = ".", features = ["xml", "json"] }
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
