[package]
name = "async-opcua-types"
version = "0.14.0"
description = "OPC UA data types"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
categories = ["embedded", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-types/"
edition = "2021"

[features]
json = ["struson", "async-opcua-macros/json"]
xml = ["async-opcua-xml", "async-opcua-macros/xml"]

[lib]
name = "opcua_types"

[dependencies]
base64 = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
percent-encoding-rfc3986 = "0.1.3"
regex = { workspace = true }
struson = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }

async-opcua-macros = { path = "../async-opcua-macros", version = "0.14.0" }
async-opcua-xml = { path = "../async-opcua-xml", optional = true, version = "0.14.0" }

[dev-dependencies]
async-opcua-types = { path = ".", features = ["xml", "json"] }
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
