[package]
name = "async-opcua-xml"
version = "0.14.0"
edition = "2021"
description = "OPC UA XML loading library"
authors = ["Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua-xml/"

[lib]
name = "opcua_xml"

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
quick-xml = "0.37.2"
roxmltree = "^0.20"
thiserror = "^1"
uuid = { version = "^1", features = ["v4"] }
