[package]
name = "opcua-codegen"
version = "0.1.0"
edition = "2021"
description = "OPC UA code generation library"
authors = ["Einar Omang <einar@omang.com>"]
homepage = "https://github.com/locka99/opcua"
repository = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"

[features]
ser = ["serde", "serde_json", "serde_yaml"]
codegen = ["syn"]
default = ["ser", "codegen"]

[lib]
name = "opcua_codegen"

[dependencies]
convert_case = "0.6.0"
log = "0.4.22"
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
roxmltree = "0.20.0"
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = { version = "1.0.120", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
syn = { version = "2.0.71", features = ["full"], optional = true }
thiserror = "1.0.63"

opcua-xml = { path = "../opcua-xml" }