[package]
name = "opcua-core-namespace"
version = "0.13.0" # OPCUARustVersion
description = "OPC UA generated code for the core namespace"
authors = ["Adam Lock <locka99@gmail.com>", "Einar Omang <einar@omang.com>"]
homepage = "https://github.com/locka99/opcua"
repository = "https://github.com/locka99/opcua"
license = "MPL-2.0"
keywords = ["opcua","opc","ua"]
categories = ["embedded","network-programming"]
readme = "../README.md"
documentation = "https://docs.rs/opcua/"
edition = "2021"

[lib]
name = "opcua_core_namespace"

[dependencies]
opcua-types = { path = "../opcua-types" }
opcua-nodes = { path = "../opcua-nodes" }